# stock-factor-analysis

./: AGENTS.md  CLAUDE.md  Factor_Model_Report.docx  README.md  build_report.py  factor_model_analysis.ipynb  fda1_stock_factor_data.csv  merged_analysis_data.csv  pyproject.toml
.claude/: settings.local.json
